--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
+    "lucide-react": "^0.544.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
